# swiftnet

./: .gitignore  ADVANCED_VIRTUAL_THREADS.md  CMakeLists.txt  LICENSE  README.md  acceptor_test.cpp
cmake/: SwiftNetConfig.cmake.in
examples/: CMakeLists.txt  basic_server.cpp  file_server.cpp  performance_test.cpp  rest_api.cpp  simple_test.cpp  socket_test.cpp
include/: event_loop.hpp  io_awaitable.hpp  io_context.hpp  swiftnet.hpp  vthread.hpp  vthread_scheduler.hpp
include/detail/: cpu_affinity.hpp  mpsc_queue.hpp  os_backend.hpp
include/http/: http_server.hpp
include/net/: acceptor.hpp  tcp_socket.hpp
src/: event_loop.cpp  io_awaitable.cpp  io_context.cpp  swiftnet.cpp  vthread.cpp  vthread_scheduler.cpp
src/detail/: platform_utils.cpp
src/http/: http_server.cpp
src/net/: acceptor.cpp  tcp_socket.cpp
swiftnet.xcodeproj/: project.pbxproj
swiftnet.xcodeproj/xcuserdata/user-home.xcuserdatad/xcschemes/: xcschememanagement.plist
